# langchainStudy

./: .gitignore  CLAUDE.md  README.md  langgraph.json  main.py  pyproject.toml  skills-lock.json
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
part1_introduction/: 01_初始化模型.py  02_调用模型.py  03_创建智能体.py  04_使用messages.py  05_多模态.py  06_提示词工程.py  07_fewShot示例.py  08_结构化输出.py  09_基于model的结构化输出.py  10_工具tools.py  11.langchain内部预设工具.py  12_短期记忆.py  13_短期记忆持久存储.py  14_记忆管理策略.py  15_综合构建一个智能体.py  langchain快速入门.ipynb  test.ipynb
pro_engineer/agents/: personal_chief.py
resource/: checkpoint.db  checkpointTwo.db  personal_chief.db
