[project]
name = "langchainstudy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.17",
    "dotenv>=0.9.9",
    "langchain>=1.2.17",
    "langchain-community>=0.4.1",
    "langchain-deepseek>=1.0.1",
    "langchain-openai>=1.2.1",
    "langchain-tavily>=0.2.18",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "notebook>=7.5.6",
    "openai>=2.35.1",
]
[tool.pyright]
reportAttributeAccessIssue = "none"
